fix color dark mode

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -12,8 +12,17 @@
         justify-content: space-between;
         box-shadow: 0px 3px 0px 0px hsl(0, 0%, 98%);
 
-        &.light {
+        &.dark {
             background-color: hsl(209, 23%, 22%) !important;
+            color: hsl(0, 0%, 100%);
+
+            .title {
+                .home {
+                    span {
+                        color: hsl(0, 0%, 100%);
+                    }
+                }
+            }
         }
 
         .title {
@@ -47,7 +56,7 @@
         .wrapper {
             .title {
                 margin-left: 20px;
-                
+
                 .home {
                     span {
                         font-size: 18px;
